--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -50,10 +50,6 @@ h3 {
   display: flex;
 }
 
-.displayNameList {
-  // background-color: pink;
-}
-
 .btnShadow {
   margin: 0px 10px 20px 1px;
   width: 100%;
@@ -71,31 +67,20 @@ h3 {
 
 .timeDiv {
   display: flex;
-  margin: 120px 0px 0px 25px;
+  margin: 120px 0px 0px 5px;
   position: absolute;
-  // flex-flow: row nowrap;
 }
 
 .timerBnts {
   position: absolute;
   display: flex;
   flex-flow: row nowrap;
-  top: 350px;
-  left: 30px;
-  background-color: blue;
+  top: 200px;
+  left: 25px;
 }
 
 .eachTimerBtn {
   margin: 3px;
-}
-
-.displayCd {
-  background-color: pink;
-  position: absolute;
-  font-size: 60px;
-  padding-top: 20px;
-  -webkit-transition:all linear 0.5s;
-  transition:all linear 0.5s;
 }
 
 .minSec {
@@ -103,15 +88,29 @@ h3 {
   margin-top: 10px;
 }
 
-.eachNumCont {
-  // display: flex;
-  // background-color: blue;
-  // flex-flow: row wrap;
+
+.incDecWrap.ng-hide-add {
+  // animation: my_fade_animation 0.5s linear;
+  // -webkit-animation: my_fade_animation 0.5s linear;
+
 }
-.inputNumWrap {
-  display: flex;
-  // flex-flow: row nowrap;
+
+.incDecWrap.ng-hide-remove {
+  // animation: my_fade_animation 0.5s linear;
+  // -webkit-animation: my_fade_animation 0.5s linear;
+
 }
+
+
+@keyframes my_fade_animation {
+    from { opacity:1;  }
+      to { opacity:0;  }
+}
+@-webkit-keyframes my_fade_animation {
+    from { opacity:0;  }
+      to { opacity:1;  }
+}
+
 #inputNum {
   font-size: 55px;
   height: 160px;
@@ -120,9 +119,11 @@ h3 {
   width: 100px;
   margin-left: 9px;
   border-radius: 20px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: $dark;
+  // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   color: #ABA8AA;
-  background-color: pink;
+
+
 }
 
 .add1 {
@@ -130,7 +131,7 @@ h3 {
   position: absolute;
   padding: 0px 44px 0px 44px;
   left: 8px;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
 
 }
 
@@ -139,15 +140,15 @@ h3 {
   position: absolute;
   padding: 0px 44px 0px 44px;
   left: 117.5px;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
 
 }
 
 .sub1 {
   z-index: 10px;
   position: absolute;
-  left: 9px;
-  top: 118px;
+  left: 8.7px;
+  top: 115px;
   padding: 0px 44px 0px 44px;
   border-radius: 0px 0px 20px 20px ;
 
@@ -157,7 +158,7 @@ h3 {
   z-index: 10px;
   position: absolute;
   left: 118px;
-  top: 118px;
+  top: 115px;
   padding: 0px 44px 0px 44px;
   border-radius: 0px 0px 20px 20px;
 
@@ -285,8 +286,6 @@ h3 {
   transition: all ease-in-out 250ms;
 }
 
-
-
 .textModalDiv {
   background-color: RGBA(32, 32, 32, 0.7);
   height: 440px;
@@ -296,7 +295,6 @@ h3 {
 
 .modalMessage {
   color: white;
-  // font-size: 20px;
   padding: 30px;
   width: 90%;
   min-height: 0 !important;
@@ -325,22 +323,4 @@ h3 {
           0 0 16px rgba(0, 0, 0, 0.1);
 
 }
-
-
-// .inputForm .ion-modal-content-custom {
-//   width: 100%;
-//   height: 100%;
-//   color: #FFF;
-//   background-color: #333;
-//   border-radius: 10px; }
-
-/* Fix modal backdrop for smaller devices */
-// @media (max-width: 679px) {
-//   .active .modal-backdrop-bg {
-//     opacity: .5; }
-//   .modal-backdrop-bg {
-//     -webkit-transition: opacity 300ms ease-in-out;
-//     transition: opacity 300ms ease-in-out;
-//     background-color: #000;
-//     opacity: 0.8; } }
 
