--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,6 +23,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 
+// @mixin
 
 * {
   margin: 0px;
@@ -50,14 +51,16 @@ h3 {
 }
 
 .homeButton {
-  padding: 0px 7px 0px 18px;
+  // padding: 0px 7px 0px 18px;
   display: flex;
+  // background-color: purple;
 }
 
 .btnShadow {
-  margin: 0px 10px 20px 1px;
+  margin: 0px 0px 20px 0px;
   width: 100%;
   font-size: 18px;
+  // vertical-align: middle;
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 
